src/test/ui/nll/closure-requirements/propagate-approximated-ref.stderr
warning: not reporting region error due to nll
  --> $DIR/propagate-approximated-ref.rs:57:9
   |
LL |         demand_y(x, y, x.get()) //~ WARNING not reporting region error due to nll
   |         ^^^^^^^^^^^^^^^^^^^^^^^

note: External requirements
  --> $DIR/propagate-approximated-ref.rs:53:47
   |
LL |       establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
   |  _______________________________________________^
LL | |         //~^ ERROR unsatisfied lifetime constraints
LL | |
LL | |         // Only works if 'x: 'y:
LL | |         demand_y(x, y, x.get()) //~ WARNING not reporting region error due to nll
LL | |     });
   | |_____^
   |
   = note: defining type: DefId(0/1:18 ~ propagate_approximated_ref[317d]::supply[0]::{{closure}}[0]) with closure substs [
               i16,
               for<'r, 's, 't0, 't1, 't2, 't3> extern "rust-call" fn((&ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 'r)) std::cell::Cell<&'_#1r &ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 's)) u32>, &ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 't0)) std::cell::Cell<&ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 't1)) &'_#2r u32>, &ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 't2)) std::cell::Cell<&ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 's)) u32>, &ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 't3)) std::cell::Cell<&ReLateBound(DebruijnIndex(0), BrNamed(crate0:DefIndex(0:0), 't1)) u32>))
           ]
   = note: number of external vids: 5
   = note: where '_#1r: '_#2r

note: No external requirements
  --> $DIR/propagate-approximated-ref.rs:52:1
   |
LL | / fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
LL | |     establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
LL | |         //~^ ERROR unsatisfied lifetime constraints
LL | |
...  |
LL | |     });
LL | | }
   | |_^
   |
   = note: defining type: DefId(0/0:6 ~ propagate_approximated_ref[317d]::supply[0]) with substs []

error: unsatisfied lifetime constraints
  --> $DIR/propagate-approximated-ref.rs:53:5
   |
LL |   fn supply<'a, 'b>(cell_a: Cell<&'a u32>, cell_b: Cell<&'b u32>) {
   |             --  -- lifetime `'b` defined here
   |             |
   |             lifetime `'a` defined here
LL | /     establish_relationships(&cell_a, &cell_b, |_outlives1, _outlives2, x, y| {
LL | |         //~^ ERROR unsatisfied lifetime constraints
LL | |
LL | |         // Only works if 'x: 'y:
LL | |         demand_y(x, y, x.get()) //~ WARNING not reporting region error due to nll
LL | |     });
   | |______^ argument requires that `'a` must outlive `'b`

error: aborting due to previous error

